Fix margins on small screens

--- a/www/less/player.less
+++ b/www/less/player.less
@@ -35,4 +35,8 @@ button {
   p#human, p#computer{
     margin-left: 21px;
   }
+
+  .form-control{
+  margin: 0px 15px;
+  }
 }
